# manabi

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  Dockerfile.build  Dockerfile.test  MANIFEST.in  Pipfile  README.md  autotest  docker-compose.yml  pyproject.toml  ruff.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: dependabot.yml  pypi.yml  release.yml  tests.yml
branca-test/: Cargo.toml
branca-test/src/: main.rs
c/: build  config  increment_check  install  jlfenv  pipinstall  test
manabi/: __init__.py  __main__.py  auth.py  auth_test.py  conftest.py  conftest_test.py  encode.py  encode_test.py  filesystem.py  filesystem_test.py  lock.py  lock_test.py  log.py  mock.py  token.py  token2.py  token2_test.py  token_test.py  util.py  util_test.py
manabi/data/: qwert.docx
manabi_django/: manage.py
manabi_django/manabi_django/: asgi.py  settings.py  wsgi.py
webdav_camac/: __init__.py  __main__.py  conftest.py
