[metadata]
name = manabi
version = 0.1
description = Provide WebDAV access for documents.
long_description = file: README.md
url = https://github.com/projectcaluma/manabi
author = Adfinis AG
license = GPL-3.0-or-later
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
