[metadata]
name = manabi
version = 0.2
description = Provide WebDAV access for documents.
long_description = file: README.md
url = https://github.com/projectcaluma/manabi
author = Adfinis AG
license = GPL-3.0-or-later
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
    wsgidav
    pybranca
    pybase62
    attrs
    sqlitedict

[options.extras_require]
dev =
    black==20.8b1
    pytest
    pdbpp
    isort
    flake8
    flake8-bugbear
    flake8-debugger
    flake8-docstrings
    flake8-isort
    flake8-string-format
    flake8-tuple
    python-language-server
    cheroot
    requests
    hypothesis
    mypy

[options.entry_points]
console_scripts =
  manabi-keygen = manabi:keygen


[flake8]
ignore =
    # line too long (managed by black)
    E501,
    # do not enforce existence of docstrings
    D100,
    D101,
    D102,
    D103,
    D104,
    D105,
    D106,
    D107,
max-line-length = 88
max-complexity = 10
doctests = True

[tool:isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88
